<resources>
    <string name="app_name">Nivi GPS</string>
    <string name="sign_in_login_button">Login</string>
    <string name="sign_in_hint_email">ID/Email ID</string>
    <string name="sign_in_hint_password">Password</string>
    <string name="tracking_title">Map</string>
    <string name="tracking_menu_driver_info">Driver Info</string>
    <string name="tracking_menu_notifications">Notifications</string>
    <string name="tracking_menu_settings">Settings</string>
    <string name="tracking_menu_power">Power</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_no_data">You do not have any notifications.</string>
    <string name="notifications_menu_refresh">Refresh</string>
    <string name="notifications_menu_delete">Delete</string>
    <string name="driver_title">Driver Info</string>
    <string name="tracking_dialog_logout_confirm">Are you sure?</string>
    <string name="button_logout">Logout</string>
    <string name="button_cancel">Cancel</string>
    <string name="sign_in_remember_me">Remember me</string>
    <string name="notifications_clear_confirm">Are you sure?</string>
    <string name="button_clear">DELETE</string>
    <string name="profile_hint_name">Name</string>
    <string name="profile_hint_email">Email</string>
    <string name="profile_registration_button">Sign Up</string>
    <string name="profile_hint_password">Password</string>
    <string name="registration_title">Sign Up</string>
    <string name="button_ok">OK</string>
    <string name="registration_sign_up_success">You have successfully registered. Now you can sign in.</string>
    <string name="sign_in_registration_link">SIGN UP</string>
    <string name="no_account_yet_create_one">Not an account yet? Create one</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_menu_tracking">Map</string>
    <string name="main_menu_driver_info">Driver Info</string>
    <string name="main_menu_notifications">Reports</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_signout">Sign Out</string>
    <string name="vehicle_monitoring_system">Vehicle Monitoring System</string>

    <string name="main_menu_bus">Bus</string>
    <string name="main_menu_kids">Kids</string>
    <string name="main_menu_pick_up">Pickup Point</string>
    <string name="main_menu_notification_setting">Notifications</string>
    <string name="main_menu_user_profile">User Profile</string>
    <string name="main_menu_privacy_policy">Privacy Policy</string>
    <string name="main_menu_terms">Terms &amp; Conditions</string>
    <string name="main_menu_faq">bus</string>
    <string name="main_menu_feedback">Feedback</string>
    <string name="main_menu_contactus">Contact Us</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="logo_name">Nivi GPS</string>
    <string name="main_menu_alert">Alerts</string>
    <string name="main_menu_device">Vehicles</string>
    <string name="main_menu_alerts_setting">Alerts</string>
    <string name="settings">settings</string>
    <string name="check_terms_and_conditions">By signing up I agree to the Terms of Service</string>
    <string name="default_email">myname@gmail.com</string>
    <string name="default_name">My Full Name</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>

</resources>