<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group
		android:id="@+id/menu_first"
		android:checkableBehavior="single">

		<item
			android:id="@+id/action_tracking"
			android:icon="@drawable/ic_map"
			android:checked="true"
			android:title="@string/main_menu_tracking" />
        <item
            android:id="@+id/action_device"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/main_menu_device" />

		<item
			android:id="@+id/action_driver"
			android:icon="@drawable/ic_person"
			android:title="@string/main_menu_driver_info" />

		<item
			android:id="@+id/action_alert"

            android:icon="@drawable/ic_notifications"
			android:title="@string/main_menu_alert" />

		<item
			android:id="@+id/action_notifications"
			android:icon="@drawable/ic_reports_black_24dp"
			android:title="@string/main_menu_notifications" />

	</group>

	<group
		android:id="@+id/menu_settings">
		<item android:title="@string/settings">
			<menu>


				<item
					android:id="@+id/action_alerts_settings"
					android:icon="@drawable/ic_settings"
					android:title="@string/main_menu_alerts_setting" />
				<item
					android:id="@+id/action_user_profile"
					android:icon="@drawable/ic_profile_setting_black_24dp"
					android:title="@string/main_menu_user_profile" />
			</menu>
		</item>
	</group>

	<group
		android:id="@+id/menu_last"
		android:checkableBehavior="single">

		<item
			android:id="@+id/action_privacy_policy"
			android:icon="@drawable/ic_public_black_24dp"
			android:title="@string/main_menu_privacy_policy" />
		<item
			android:id="@+id/action_terms"
			android:icon="@drawable/ic_terms_24dp"
			android:title="@string/main_menu_terms" />
		<item
			android:id="@+id/action_feedback"
			android:icon="@drawable/ic_feedback_black_24dp"
			android:title="@string/main_menu_feedback" />
		<item
			android:id="@+id/action_contactus"
			android:icon="@drawable/ic_contact_black_24dp"
			android:title="@string/main_menu_contactus" />
	</group>

		<!--<item-->
		<!--android:id="@+id/action_settings"-->
		<!--android:icon="@drawable/ic_settings"-->
		<!--android:title="@string/tracking_menu_settings"-->
		<!--app:showAsAction="ifRoom" />-->

		<item
			android:id="@+id/action_logout"
			android:icon="@drawable/ic_power"
			android:title="@string/main_menu_signout"
			android:checkable="false" />



</menu>