<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/main_background"

	android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:text="@string/logo_name"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:textStyle="" />

            <ImageView
                android:layout_width="30dp"

                android:layout_height="30dp"
                android:layout_toRightOf="@+id/text_logo"
                android:background="@drawable/logo" />

        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/sign_in_hint_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_hint_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox_remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/sign_in_remember_me"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_login"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"

            android:text="@string/sign_in_login_button"
            android:textColor="@color/white"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/text_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_in_registration_link"
                android:textColor="@color/white" />

        </FrameLayout>

    </LinearLayout>

	<ProgressBar
		android:id="@+id/progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:indeterminate="true"
		android:visibility="gone"/>

</FrameLayout>