<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/main_background">
	<include layout="@layout/layout_toolbar"/>

	<FrameLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/toolbar"
		android:padding="16dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:hint="@string/profile_hint_name">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/edit_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="text"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:hint="@string/profile_hint_email">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/edit_email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textEmailAddress"/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_marginTop="8dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/profile_hint_password">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/edit_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPassword"/>

			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/button_registration"
				android:layout_marginTop="8dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/profile_registration_button"/>

		</LinearLayout>

		<ProgressBar
			android:id="@+id/progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:indeterminate="true"
			android:visibility="gone"/>

	</FrameLayout>

</RelativeLayout>